fix java 10 compliance